--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -28,8 +28,8 @@
   </head>
   <body>
     <div id="root"></div>
-<!--     <script type="module" src="/src/main.jsx"></script> -->
-    <script type="module" src="/assets/index.js"></script> 
+    <script type="module" src="/src/main.jsx"></script>
+<!--     <script type="module" src="/assets/index.js"></script>  -->
 
   </body>
 </html>
