--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!-- <!doctype html> -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -28,7 +28,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+<!--     <script type="module" src="/src/main.jsx"></script> -->
 <!--     <script type="module" src="/assets/index.js"></script>  -->
 
   </body>
